[fix](ABC-1267): Vertical Visual Picker - Fixed missing background color selected styling hook

--- a/src/modules/base/verticalVisualPicker/verticalVisualPicker.css
+++ b/src/modules/base/verticalVisualPicker/verticalVisualPicker.css
@@ -69,6 +69,15 @@
     );
 }
 
+.slds-visual-picker
+    input:checked:not(:disabled)
+    ~ label
+    .avonni-vertical-visual-picker__figure {
+    background-color: var(
+        --avonni-vertical-visual-picker-figure-color-background-selected
+    );
+}
+
 .avonni-vertical-visual-picker__figure-with-tags {
     height: 7rem;
 }
